<resources>

    <string-array name="weeks">
        <item>1 неделя</item>
        <item>2 неделя</item>
        <item>3 неделя</item>
        <item>4 неделя</item>
        <item>5 неделя</item>
        <item>6 неделя</item>
        <item>7 неделя</item>
        <item>8 неделя</item>
        <item>9 неделя</item>
        <item>10 неделя</item>
        <item>11 неделя</item>
        <item>12 неделя</item>
        <item>13 неделя</item>
        <item>14 неделя</item>
        <item>15 неделя</item>
        <item>16 неделя</item>
        <item>17 неделя</item>
    </string-array>

    <string-array name="lessons">
        <item>1 занятие</item>
        <item>2 занятие</item>
        <item>3 занятие</item>
        <item>4 занятие</item>
        <item>5 занятие</item>
        <item>6 занятие</item>
    </string-array>

    <string name="app_name">Расписание</string>
    <string name="start_activity_title">УЧЕБНОЕ  РАСПИСАНИЕ</string>
    <string name="start_button_import_schedule">Загрузить расписание</string>
    <string name="start_button_create_schedule">Создать новое расписание</string>
    <string name="navigation_view_title">Расписание</string>
    <string name="call_title">Выбрать</string>
    <string name="settings_date_start_title">Поиск свободной аудитории</string>
    <string name="settings_import_title">Загрузить расписание с сервера</string>
    <string name="settings_change_theme">Изменить тему приложения</string>
    <string name="dialog_title">Название файла</string>
    <string name="dialog_edittext">Введите название</string>
    <string name="dialog_button_add">Добавить</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="audience_edittext">Аудитория</string>
    <string name="search_free_audience">Поиск свободной аудитории</string>
    <string name="educator_edittext">Преподаватель</string>
    <string name="typelesson_edittext">Тип занятия</string>
    <string name="subject_edittext">Предмет</string>
    <string name="clear_subjects">Очистить предметы?</string>
    <string name="clear_audience">Очистить аудитории?</string>
    <string name="clear_educators">Очистить преподавателей?</string>
    <string name="clear_typelessons">Очистить типы занятий?</string>
    <string name="network_error">Ошибка подключения к сети</string>
    <string name="unknown_error">Произошла ошибка, попробуйте еще раз</string>
    <string name="error_api_unexpected">Неизвестная ошибка при ответе от удаленного сервера</string>
    <string name="retry">Повторить</string>
    <string name="menu_settings_string">Настройки</string>
    <string name="menu_schedule_string">Расписание</string>
    <string name="menu_what_string">Что-то да будет</string>
    <string name="developer">Разработчик</string>
    <string name="settings">Настройки</string>

//title
    <string name="title_subject">Добавить предмет</string>
    <string name="title_audience">Добавить аудиторию</string>
    <string name="title_educator">Добавить преподавателя</string>
    <string name="title_typelesson">Добавить тип занятия</string>
//error
    <string name="error_subject">Введите предмет</string>
    <string name="error_audience">Введите аудиторию</string>
    <string name="error_educator">Введите преподавателя</string>
    <string name="error_typelesson">Введите тип предмета</string>
//hint
    <string name="hint_subject">Предмет</string>
    <string name="hint_audience">Аудитория</string>
    <string name="hint_educator">Преподаватель</string>
    <string name="hint_typelesson">Тип занятия</string>
//delete
    <string name="delete_subject">Удалить предмет «%1$s»?</string>
    <string name="delete_audience">Удалить аудиторию «%1$s»?</string>
    <string name="delete_educator">Удалить преподавателя «%1$s»?</string>
    <string name="delete_typelesson">Удалить тип предмета «%1$s»?</string>
    <string name="ack">Подтвердить</string>
    <string name="cancel">Отмена</string>

    <string name="copy_to_evenweek">Скопировать неделю в четные недели?</string>
    <string name="copy_to_unevenweek">Скопировать неделю в нечетные недели?</string>
    <string name="title_select_theme">Выбор темы</string>
    <string name="string_empty_lesson">Занятие отсутствует</string>
    <string name="string_time_One">13:10</string>
    <string name="string_time_Two">14:00</string>
    <string name="select_date">Выберите дату</string>
    <string name="transfer">Отправить / получить расписание</string>
    <string name="button_import">Импортировать</string>
    <string name="button_export">Экспортировать</string>
    <string name="title_transfer_data">Импорт / экспорт расписания</string>
    <string name="feedback_developer">Обратная связь с разработчиком</string>
    <string name="string_email_developer">Электронная почта</string>
    <string name="string_vk_developer">Профиль Вконтакте</string>
    <string name="vk_developer">https://vk.com/mikhailvolkov1</string>
    <string name="email_developer">mailto:mikhailvolkov2014–2014@ya.ru</string>
    <string name="title_search_audience">Выберите дату и занятие</string>
    <string name="title_groups">Выберите группу</string>
    <string name="title_edit_data">Редактор данных</string>
    <string name="title_calls">Расписание звонков</string>
    <string name="string_send">Отправить</string>
    <string name="share">Share</string>
    <string name="search_free_Educator">Поиск преподавателя</string>
    <string name="search_Educator">Поиск преподавателя</string>
    <string name="title_search_educator">Выберите дату и преподавателя</string>
    <string name="string_load_subjects">Расписание выбранной группы еще не заполнено. Попробуйте загрузить позже</string>
    <string name="dialog_fragment_title_typelesson">Типы занятия</string>
    <string name="dialog_fragment_title_educator">Преподаватели</string>
    <string name="dialog_fragment_title_audience">Аудитории</string>
    <string name="dialog_fragment_title_subject">Предметы</string>
    <string name="dialog_button_edit">Сохранить</string>
    <string name="dialog_button_delete">Удалить</string>
    <string name="title_editSubject">Редактировать предмет</string>
    <string name="title_editAudience">Редактировать аудиторию</string>
    <string name="title_editEducator">Редактировать преподавателя</string>
    <string name="title_editTypelesson">Редактировать тип предмета</string>
    <string name="string_empty_day">Занятия отсутствуют ;)</string>
</resources>
