<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/search_educator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_searchEducator"
            android:layout_width="40sp"
            android:layout_height="45sp"
            android:layout_margin="@dimen/spacing_medium"
            android:padding="@dimen/spacing_medium"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/text_searchEducator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/image_searchEducator"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/search_Educator"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/arrowOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/spacing_normal" />
    </RelativeLayout>


    <View
        style="?attr/lineColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />


    <RelativeLayout
        android:id="@+id/search_audience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_searchAudience"
            android:layout_width="40sp"
            android:layout_height="45sp"
            android:layout_margin="@dimen/spacing_medium"
            android:padding="@dimen/spacing_medium"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/text_searchAudience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/image_searchAudience"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/search_free_audience"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/arrowTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/spacing_normal"
            />
    </RelativeLayout>


    <View
        style="?attr/lineColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />


    <RelativeLayout
        android:id="@+id/import_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_import"
            android:layout_width="40sp"
            android:layout_height="45sp"
            android:layout_margin="@dimen/spacing_medium"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/image_import"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/settings_import_title"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/arrowThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/spacing_normal" />
    </RelativeLayout>


    <View
        style="?attr/lineColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <RelativeLayout
        android:id="@+id/select_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_theme"
            android:layout_width="40sp"
            android:layout_height="45sp"
            android:layout_margin="@dimen/spacing_medium"
            android:padding="@dimen/spacing_medium" />

        <TextView
            android:id="@+id/text_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/image_theme"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/settings_change_theme"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/arrowFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/spacing_normal" />
    </RelativeLayout>


    <View
        style="?attr/lineColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <RelativeLayout
        android:id="@+id/transfer_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_tranfer"
            android:layout_width="40sp"
            android:layout_height="45sp"
            android:layout_margin="@dimen/spacing_medium"
            android:padding="@dimen/spacing_medium" />

        <TextView
            android:id="@+id/text_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/image_tranfer"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/transfer"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/arrowFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/spacing_normal" />
    </RelativeLayout>

    <View
        style="?attr/lineColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_about"
            android:layout_width="40sp"
            android:layout_height="45sp"
            android:layout_margin="@dimen/spacing_medium"
            android:padding="@dimen/spacing_medium"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/image_about"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/developer"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/arrowSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/spacing_normal" />
    </RelativeLayout>

    <View
        style="?attr/lineColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

</LinearLayout>